ENH made final plot for now

--- a/2021_02_26_pizzz_cutter_depth/meds-pizza-slice-viz.ipynb
+++ b/2021_02_26_pizzz_cutter_depth/meds-pizza-slice-viz.ipynb
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 160,
    "metadata": {
     "scrolled": false
    },
@@ -2249,7 +2249,8 @@
     "        \n",
     "fig.tight_layout()\n",
     "\n",
-    "sns.despine()"
+    "sns.despine()\n",
+    "plt.savefig(\"pizza_vs_stamps.pdf\")"
    ]
   },
   {
