ENH added std comps

--- a/2021_02_26_pizzz_cutter_depth/meds-pizza-slice-viz.ipynb
+++ b/2021_02_26_pizzz_cutter_depth/meds-pizza-slice-viz.ipynb
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2255,6 +2255,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute std\n",
+    "bloc = d[\"bin\"][0]\n",
+    "msk = (bloc >= 0) & (bloc < 15)\n",
+    "bem = list(d[\"bin\"][0][msk]-0.5) + [d[\"bin\"][0][msk][-1]+0.5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bcen = d[\"bin\"][0][msk]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g pizza 6.6018877 1.5554923\n",
+      "g stamp 8.747553 1.4641173\n",
+      "r pizza 6.484017 1.5677253\n",
+      "r stamp 8.640897 1.4725744\n",
+      "i pizza 6.394851 1.5229348\n",
+      "i stamp 8.525317 1.4165195\n",
+      "z pizza 6.338924 1.5683615\n",
+      "z stamp 8.440901 1.4960017\n",
+      "Y pizza 5.2393875 1.5297421\n",
+      "Y stamp 6.914897 1.4143629\n"
+     ]
+    }
+   ],
+   "source": [
+    "bloc = d[\"bin\"][0]\n",
+    "msk = (bloc >= 0) & (bloc < 15)\n",
+    "bem = list(d[\"bin\"][0][msk]-0.5) + [d[\"bin\"][0][msk][-1]+0.5]\n",
+    "\n",
+    "def _print_stats(name, band):\n",
+    "    dmsk = d[\"band\"] == band\n",
+    "    ht = np.sum(d[dmsk][name], axis=0)[msk]\n",
+    "    mn = np.sum(bcen * ht) / np.sum(ht)\n",
+    "    std = np.sqrt(np.sum((bcen-mn)**2 * ht) / np.sum(ht))\n",
+    "    print(band, name, mn, std)\n",
+    "    \n",
+    "for band in [\"g\", \"r\", \"i\", \"z\", \"Y\"]:\n",
+    "    _print_stats(\"pizza\", band)\n",
+    "    _print_stats(\"stamp\", band)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Y', 'i', 'Y', 'i', 'r', 'i', 'i', 'g', 'r', 'Y', 'i', 'r', 'Y',\n",
+       "       'r', 'g', 'r', 'r', 'i', 'z', 'Y', 'r', 'z', 'r', 'Y', 'z', 'r',\n",
+       "       'Y', 'i', 'g', 'Y', 'g', 'i', 'Y', 'r', 'z', 'i', 'Y', 'Y', 'i',\n",
+       "       'r', 'g', 'r', 'z', 'Y', 'g', 'Y', 'r', 'i', 'z', 'Y', 'r', 'i',\n",
+       "       'g', 'r', 'i', 'r', 'i', 'g', 'Y', 'z', 'z', 'g', 'Y', 'r', 'g',\n",
+       "       'i', 'z', 'g', 'z', 'i', 'Y', 'r', 'i', 'Y', 'i', 'r', 'z', 'g',\n",
+       "       'r', 'Y', 'r', 'Y', 'g', 'r', 'z', 'Y', 'z', 'g', 'Y', 'z', 'i',\n",
+       "       'g', 'r', 'i', 'g', 'r', 'i', 'g', 'r', 'Y', 'i', 'g', 'z', 'Y',\n",
+       "       'i', 'z', 'g', 'Y', 'i', 'i', 'Y', 'r', 'z', 'Y', 'Y', 'i', 'z',\n",
+       "       'g', 'r', 'i', 'z', 'r', 'i', 'Y', 'z', 'g', 'r', 'Y', 'g', 'r',\n",
+       "       'z', 'g', 'Y', 'i', 'z', 'g', 'r', 'Y', 'i', 'z', 'g', 'r', 'z',\n",
+       "       'g', 'Y', 'i', 'r', 'i', 'g', 'i', 'g', 'z', 'i', 'g', 'Y', 'i',\n",
+       "       'z', 'g', 'Y', 'i', 'g', 'g', 'Y', 'r', 'z', 'i', 'g', 'r', 'z',\n",
+       "       'g', 'r', 'i', 'Y', 'z', 'g', 'r', 'Y', 'z', 'r', 'z', 'Y', 'r',\n",
+       "       'r', 'i', 'z', 'Y', 'z', 'g', 'Y', 'z', 'i', 'g', 'g', 'r', 'i',\n",
+       "       'g', 'Y', 'z', 'g', 'Y', 'i', 'Y', 'i', 'z', 'r', 'Y', 'z', 'z',\n",
+       "       'r', 'r', 'Y', 'g', 'Y', 'z', 'g', 'i', 'Y', 'g', 'r', 'i', 'z',\n",
+       "       'r', 'i', 'z', 'g', 'r', 'r', 'r', 'Y', 'i', 'z', 'Y', 'r', 'i',\n",
+       "       'z', 'g', 'Y', 'i', 'z', 'r', 'Y', 'i', 'z', 'g', 'Y', 'z', 'i',\n",
+       "       'Y', 'z', 'i', 'g', 'z', 'z', 'g', 'i', 'z', 'r', 'z', 'g', 'g',\n",
+       "       'r', 'z', 'g', 'Y', 'z', 'g', 'r', 'Y', 'z', 'z', 'g', 'i', 'z',\n",
+       "       'g', 'z', 'Y', 'i', 'i', 'z', 'Y', 'g', 'g', 'Y', 'i', 'g', 'i',\n",
+       "       'g', 'z', 'r', 'i', 'z', 'r', 'z', 'g', 'g', 'z', 'Y', 'i', 'g',\n",
+       "       'r', 'z', 'i', 'g', 'z', 'Y', 'i', 'z', 'g', 'r', 'Y', 'z', 'g',\n",
+       "       'Y', 'z', 'r', 'i', 'g', 'r', 'Y', 'i', 'z', 'g', 'r', 'Y', 'i',\n",
+       "       'r', 'i', 'z', 'Y', 'Y', 'r', 'g', 'z', 'g', 'z', 'g', 'r', 'Y',\n",
+       "       'i', 'i', 'Y', 'z', 'g', 'r', 'i', 'z', 'g', 'i', 'z', 'Y', 'i',\n",
+       "       'g', 'i', 'r', 'r', 'Y', 'z', 'Y', 'z', 'r', 'Y', 'i', 'z', 'g',\n",
+       "       'z', 'r', 'i', 'Y', 'g', 'r', 'r', 'z', 'g', 'r', 'z', 'g', 'i',\n",
+       "       'g', 'r', 'Y', 'g', 'i', 'z', 'Y', 'i', 'r', 'i', 'Y', 'r', 'z',\n",
+       "       'g', 'Y', 'z', 'z', 'Y', 'r', 'r', 'Y', 'r', 'r', 'z', 'r', 'Y',\n",
+       "       'i', 'z', 'Y', 'i', 'i', 'g', 'Y', 'i', 'g', 'i', 'z', 'g', 'Y',\n",
+       "       'g', 'r', 'i', 'r', 'r', 'Y', 'z', 'i', 'Y', 'i', 'z', 'g', 'r',\n",
+       "       'Y', 'z', 'i', 'r', 'r', 'z', 'g', 'r', 'g', 'i', 'g', 'Y', 'i',\n",
+       "       'g', 'i', 'z', 'i', 'r', 'z', 'g', 'r', 'i', 'Y', 'r', 'z', 'Y',\n",
+       "       'g', 'Y', 'i', 'Y', 'z', 'g', 'Y', 'i', 'z', 'g', 'g', 'r', 'g',\n",
+       "       'r', 'g', 'r', 'i', 'g', 'r', 'Y', 'z', 'Y', 'r', 'i', 'Y', 'r',\n",
+       "       'g', 'r', 'Y', 'i'], dtype='<U1')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
    "outputs": [
@@ -2406,7 +2535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
