--- a/2021_11_11_shear_stats/plots.ipynb
+++ b/2021_11_11_shear_stats/plots.ipynb
@@ -162,7 +162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:desy6] *",
+   "display_name": "Python [conda env:desy6]",
    "language": "python",
    "name": "conda-env-desy6-py"
   },
@@ -176,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
