--- a/2023_01_19_extract_psf_to_cells/Untitled.ipynb
+++ b/2023_01_19_extract_psf_to_cells/Untitled.ipynb
@@ -2,6 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "f7754c99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 43/43 [00:05<00:00,  7.27it/s]\n",
+      "100%|██████████| 43/43 [00:06<00:00,  6.58it/s]\n",
+      "100%|██████████| 43/43 [00:05<00:00,  7.40it/s]\n",
+      "100%|██████████| 43/43 [00:06<00:00,  6.92it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "import fitsio\n",
+    "import tqdm\n",
+    "\n",
+    "for band in \"griz\":\n",
+    "    fns = glob.glob(\"epochs_info/%s/*.fits\" % band)\n",
+    "    uccds = set()\n",
+    "    for fn in tqdm.tqdm(fns):\n",
+    "        ei = fitsio.read(fn)\n",
+    "        for i in range(len(ei)):\n",
+    "            uccds.add((ei[\"expnum\"][i], ei[\"ccdnum\"][i], ei[\"band\"][i]))        \n",
+    "            \n",
+    "    with open(\"uccds_%s.txt\" % band, \"w\") as fp:\n",
+    "        fp.write(\"# expnum ccdnum band\\n\")\n",
+    "        for dta in uccds:\n",
+    "            fp.write(\"%d %d %s\\n\" % dta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8558f9e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "7a00f4da",
    "metadata": {},
@@ -76,8 +120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "452ddfc8",
+   "execution_count": 5,
+   "id": "415bb591",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,16 +163,8 @@
     "    except Exception:\n",
     "        pass\n",
     "        \n",
-    "    return ei, ii"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "415bb591",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return ei, ii\n",
+    "\n",
     "def _process_tile(tname, uccds):\n",
     "    fnames = _download_tile(tname, os.getcwd())\n",
     "    for fname in fnames:\n",
@@ -253,29 +289,6 @@
     "    \n",
     "    if tname == tnames[3]:\n",
     "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "05680f4e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import glob\n",
-    "\n",
-    "for band in \"griz\":\n",
-    "    fns = glob.glob(\"epochs_info/%s/*.fits\" % band)\n",
-    "    uccds = set()\n",
-    "    for fn in fns:\n",
-    "        ei = fitsio.read(fn)\n",
-    "        for i in range(len(ei)):\n",
-    "            uccds.add((ei[\"expnum\"][i], ei[\"ccdnum\"][i], ei[\"band\"][i]))        \n",
-    "            \n",
-    "    with open(\"uccds_%s.txt\" % band, \"w\") as fp:\n",
-    "        fp.write(\"# expnum ccdnum band\\n\")\n",
-    "        for dta in uccds:\n",
-    "            fp.write(\"%d %d %s\\n\" % dta)"
    ]
   },
   {
