--- a/2023_01_27_blind_and_test_v4/read_parquet.ipynb
+++ b/2023_01_27_blind_and_test_v4/read_parquet.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "826d5e85",
+   "id": "4ccfd889",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a05eaac2",
+   "id": "880d9090",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "775df284",
+   "id": "a35fd3e1",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3429fd34",
+   "id": "085a5881",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8efd02e5",
+   "id": "77444ac8",
    "metadata": {},
    "outputs": [
     {
@@ -132,9 +132,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc8b0771",
+   "metadata": {},
+   "source": [
+    "## much of the time is conversion out of pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0cb7e87d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.14 s, sys: 3.12 s, total: 5.27 s\n",
+      "Wall time: 44.9 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "dd = pf.to_pandas(\n",
+    "    columns=[\"ra\", \"dec\", \"gauss_g_1\", \"gauss_g_2\"],\n",
+    "    filters=[[(\"mdet_step\", \"==\", \"noshear\")]],\n",
+    "    index=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8e2fe4d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 140 ms, sys: 7.21 ms, total: 148 ms\n",
+      "Wall time: 163 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "dd = pf.to_pandas(\n",
+    "    columns=[\"ra\", \"dec\", \"gauss_g_1\", \"gauss_g_2\"],\n",
+    "    filters=[[(\"mdet_step\", \"==\", \"noshear\"), (\"patch_num\", \"==\", 20)]],\n",
+    "    index=False,\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8615cad9",
+   "id": "839a1f9c",
    "metadata": {},
    "outputs": [],
    "source": []
