update for final code bits

--- a/2024_04_22_big_ellip_gals/make_masks_big_gals.ipynb
+++ b/2024_04_22_big_ellip_gals/make_masks_big_gals.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1f950e0d-dd5e-4188-991e-6f58910109e6",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "98964bb5-1d8a-4891-b893-ed5b5bc39d7f",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 91/91 [00:04<00:00, 19.77it/s]\n"
+      "100%|███████████████████████████████████████████| 91/91 [00:04<00:00, 20.11it/s]\n"
      ]
     }
    ],
@@ -119,17 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d852475a-e070-4520-9537-44a44243c77c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hsm = hsp.HealSparseMap.read(\"~/Desktop/y6-combined-hleda-gaiafull-des-stars-hsmap131k-mdet-v2.hsp\")"
+    "hsm = hsp.HealSparseMap.read(\"y6-combined-hleda-gaiafull-des-stars-hsmap131k-mdet-v2.hsp\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cb1a546a-d2c6-462b-a37d-2537b9bfa9cb",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "caf3cf29-af55-4812-8a71-316ab309e420",
    "metadata": {},
    "outputs": [
@@ -327,16 +327,11 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total masked area: 0.28287228447607804\n"
-     ]
     }
    ],
    "source": [
+    "nhsm = hsp.HealSparseMap.read(\"y6-combined-hleda-gaiafull-des-stars-hsmap131k-mdet-v2.hsp\")\n",
+    "\n",
     "final_map = hsp.HealSparseMap.make_empty(\n",
     "    32,\n",
     "    2**14,\n",
@@ -374,7 +369,6 @@
     "    \n",
     "    hnel16_131 = hnel16.upgrade(2**17)\n",
     "    \n",
-    "    nhsm = hsp.HealSparseMap.read(\"~/Desktop/y6-combined-hleda-gaiafull-des-stars-hsmap131k-mdet-v2.hsp\")\n",
     "    nhsm.update_values_pix(hnel16_131.valid_pixels, 0)\n",
     "\n",
     "    ax = axs[i, 0]\n",
@@ -399,9 +393,43 @@
     "plt.savefig(\"hleda_extra_mask_v1.png\", dpi=300)\n",
     "plt.show()\n",
     "\n",
-    "print(\"total masked area:\", final_map.n_valid * hpgeom.nside_to_pixel_area(final_map.nside_sparse))\n",
-    "\n",
     "final_map.write(\"hleda_extra_mask_v1.hsp\", clobber=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "16a911ed-4eac-489e-80c9-dd73b549ff6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total masked area in new masks: 0.28287228447607804\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"total masked area in new masks:\", final_map.n_valid * hpgeom.nside_to_pixel_area(final_map.nside_sparse))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f3375307-52f1-4af3-9def-8af29e094b9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total masked area after overlaps: 0.2039139636494084\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"total masked area after overlaps:\", (hsm.n_valid - nhsm.n_valid) * hpgeom.nside_to_pixel_area(hsm.nside_sparse))"
    ]
   },
   {
