add first pass at fitsa

--- a/2024_10_21_fgmodels/des-y6-nz-fits-full-model-nontomo-tests.ipynb
+++ b/2024_10_21_fgmodels/des-y6-nz-fits-full-model-nontomo-tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "23a2ea54-b555-417f-82a3-e845ae574ed3",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "226b1e7d-a9cd-467e-81a5-677f354c738d",
    "metadata": {},
    "outputs": [],
@@ -28,11 +28,146 @@
     "with h5py.File(\"/Users/beckermr/Desktop/sompz_y6_imsim_400Tile.hdf5\") as d:\n",
     "    nzs = {}\n",
     "    for _bin in range(4):\n",
-    "        nzs[_bin] = d[f\"catalog/sompz/pzdata/bin{_bin}\"][:]\n",
-    "    zlow = d[\"catalog/sompz/pzdata/zlow\"][:]\n",
-    "    zhigh = d[\"catalog/sompz/pzdata/zhigh\"][:]\n",
+    "        nzs[_bin] = d[f\"catalog/sompz/pzdata/bin{_bin}\"][:].astype(np.float64)\n",
+    "    zlow = d[\"catalog/sompz/pzdata/zlow\"][:].astype(np.float64)\n",
+    "    zhigh = d[\"catalog/sompz/pzdata/zhigh\"][:].astype(np.float64)\n",
     "    z = (zlow + zhigh)/2\n",
-    "    dz = z[1] - z[0]"
+    "    dz = zhigh - zlow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c4d2903e-a18a-4e8d-a7ce-9f904c9d0974",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-0.005,  0.005,  0.015,  0.025,  0.035]),\n",
+       " array([0.005, 0.015, 0.025, 0.035, 0.045]),\n",
+       " array([0.01, 0.01, 0.01, 0.01, 0.01]))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zlow[:5], zhigh[:5], dz[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "aad3f8b4-dbcc-484a-b250-d02e70464594",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(300,)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dz.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "4756f0ca-b3ba-4919-90ab-74a59a7975e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Array(1.00191061, dtype=float64), Array(1.00191061, dtype=float64))"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jnp.trapezoid(nzs[0], x=z), jnp.trapezoid(nzs[0], dx=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a47af699-9da4-4c9b-b65e-dd565e3d3332",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y[0] = -0.1317170156477518:  1.0019106100675663\n",
+      "y[0] = 0.0:  1.0025691951458051\n",
+      "y_interp[0] = 0.03896078798897881:  1.010224214760107\n",
+      "y_interp[0] = 0.0:  1.0092501950603825\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5py.File(\"/Users/beckermr/Desktop/sompz_y6_imsim_400Tile.hdf5\") as d:\n",
+    "    nzs = {}\n",
+    "    for _bin in range(4):\n",
+    "        nzs[_bin] = d[f\"catalog/sompz/pzdata/bin{_bin}\"][:].astype(np.float64)\n",
+    "    zlow = d[\"catalog/sompz/pzdata/zlow\"][:].astype(np.float64)\n",
+    "    zhigh = d[\"catalog/sompz/pzdata/zhigh\"][:].astype(np.float64)\n",
+    "    z = (zlow + zhigh)/2\n",
+    "    dz = zhigh - zlow\n",
+    "\n",
+    "    y = nzs[0].copy()\n",
+    "    \n",
+    "    print(f\"y[0] = {y[0]}: \", (0.5 * y[0] + np.sum(y[1:-1]) + 0.5 * y[-1]) * 0.01)\n",
+    "    \n",
+    "    y[0] = 0.0\n",
+    "    print(f\"y[0] = {y[0]}: \", (0.5 * y[0] + np.sum(y[1:-1]) + 0.5 * y[-1]) * 0.01)\n",
+    "\n",
+    "    y = nzs[0].copy()\n",
+    "    z_interp = np.linspace(0.01, 3.01, 61)\n",
+    "    y_interp = np.interp(z_interp, z, y)\n",
+    "\n",
+    "    print(f\"y_interp[0] = {y_interp[0]}: \", (0.5 * y_interp[0] + np.sum(y_interp[1:-1]) + 0.5 * y_interp[-1]) * 0.05)\n",
+    "    \n",
+    "    y_interp[0] = 0.0\n",
+    "    print(f\"y_interp[0] = {y_interp[0]}: \", (0.5 * y_interp[0] + np.sum(y_interp[1:-1]) + 0.5 * y_interp[-1]) * 0.05)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "93485ed1-a8c0-4c27-bb8b-54d456da5150",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.01, 0.06, 0.11, 0.16, 0.21, 0.26, 0.31, 0.36, 0.41, 0.46, 0.51,\n",
+       "       0.56, 0.61, 0.66, 0.71, 0.76, 0.81, 0.86, 0.91, 0.96, 1.01, 1.06,\n",
+       "       1.11, 1.16, 1.21, 1.26, 1.31, 1.36, 1.41, 1.46, 1.51, 1.56, 1.61,\n",
+       "       1.66, 1.71, 1.76, 1.81, 1.86, 1.91, 1.96, 2.01, 2.06, 2.11, 2.16,\n",
+       "       2.21, 2.26, 2.31, 2.36, 2.41, 2.46, 2.51, 2.56, 2.61, 2.66, 2.71,\n",
+       "       2.76, 2.81, 2.86, 2.91, 2.96, 3.01])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(0.01, 3.01, 61)"
    ]
   },
   {
@@ -501,9 +636,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "work",
+   "display_name": "Python [conda env:work]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-work-py"
   },
   "language_info": {
    "codemirror_mode": {
