--- a/2024_10_21_fgmodels/v0/des-y6-nz-fits-gmodel-tests.ipynb
+++ b/2024_10_21_fgmodels/v0/des-y6-nz-fits-gmodel-tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "23a2ea54-b555-417f-82a3-e845ae574ed3",
    "metadata": {},
    "outputs": [],
@@ -17,12 +17,12 @@
     "import fitsio\n",
     "from scipy.stats import gaussian_kde\n",
     "\n",
-    "import proplot as pplt"
+    "import ultraplot as uplt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ed3ab751-c8b2-4a7d-bf8d-600c42ac158a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c426db75-83a0-4fa2-a256-dd45db96753a",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "826bcb48-4f39-490c-9e7f-9cbaa9848137",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "45c464fb",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        "       2.71, 2.76, 2.81, 2.86, 2.91, 2.96, 3.01])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8a87246d",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
     "    bins=z_be,\n",
     "    density=False,\n",
     "    weights=wgt,\n",
-    ")    \n",
+    ")\n",
     "h[0] = 0.0\n",
     "dx = z_be[1:] - z_be[:-1]\n",
     "h = h / dx\n",
@@ -218,9 +218,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:work]",
+   "display_name": "des-y6",
    "language": "python",
-   "name": "conda-env-work-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -232,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
