--- a/2025_06_05_shear_noise/2pt_noise.ipynb
+++ b/2025_06_05_shear_noise/2pt_noise.ipynb
@@ -137,7 +137,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f1e00410c20>"
+       "<matplotlib.legend.Legend at 0x7f2f54388830>"
       ]
      },
      "execution_count": 5,
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a459e350",
    "metadata": {},
    "outputs": [
@@ -321,17 +321,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "a1cde5a3",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tomo ind: 0\n",
+      "theta: [ 2.80504614  3.53134386  4.44569853  5.59680285  7.04595733  8.87033473\n",
+      " 11.1670898  14.05853313 17.69864461 22.28127345 28.05046136]\n",
+      "npairs: [4.00766598e+08 6.29062316e+08 9.88028336e+08 1.55266187e+09\n",
+      " 2.44169682e+09 3.84402721e+09 6.05649418e+09 9.54273777e+09\n",
+      " 1.50450421e+10 2.37299933e+10 3.74234937e+10]\n",
+      "tomo ind: 1\n",
+      "theta: [ 2.80504614  3.53134386  4.44569853  5.59680285  7.04595733  8.87033473\n",
+      " 11.1670898  14.05853313 17.69864461 22.28127345 28.05046136]\n",
+      "npairs: [4.25743924e+08 6.67138523e+08 1.04675838e+09 1.64376917e+09\n",
+      " 2.58302638e+09 4.06472532e+09 6.40157192e+09 1.00797784e+10\n",
+      " 1.58838637e+10 2.50449143e+10 3.94827695e+10]\n",
+      "tomo ind: 2\n",
+      "theta: [ 2.80504614  3.53134386  4.44569853  5.59680285  7.04595733  8.87033473\n",
+      " 11.1670898  14.05853313 17.69864461 22.28127345 28.05046136]\n",
+      "npairs: [4.26594101e+08 6.69602434e+08 1.05207411e+09 1.65402568e+09\n",
+      " 2.60085653e+09 4.09488283e+09 6.45245584e+09 1.01627170e+10\n",
+      " 1.60186844e+10 2.52654144e+10 3.98445710e+10]\n",
+      "tomo ind: 3\n",
+      "theta: [ 2.80504614  3.53134386  4.44569853  5.59680285  7.04595733  8.87033473\n",
+      " 11.1670898  14.05853313 17.69864461 22.28127345 28.05046136]\n",
+      "npairs: [4.82808923e+08 7.58265229e+08 1.19211015e+09 1.87499643e+09\n",
+      " 2.95046129e+09 4.65124041e+09 7.33821714e+09 1.15612630e+10\n",
+      " 1.82353649e+10 2.87706905e+10 4.53789060e+10]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f1deb416990>"
+       "<matplotlib.legend.Legend at 0x7f2f24c06990>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -359,6 +389,9 @@
     "    ]\n",
     "    data = np.load(f\"cs_variance_zbin{tomo_ind}.npy\")\n",
     "    data = np.array([tuple(d) for d in data], dtype=dtype)\n",
+    "    print(\"tomo ind:\", tomo_ind)\n",
+    "    print(\"theta:\", data[\"theta\"])\n",
+    "    print(\"npairs:\", data[\"npairs\"])\n",
     "\n",
     "    pred = []\n",
     "    pred_cc = []\n",
